# superviz.io

./: .bazelignore  .bazelrc  .bazelrc.local.example  .gitignore  BUILD.bazel  CNAME  COMMERCIAL-LICENSE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  MODULE.bazel  Makefile  README.md  SECURITY.md  WORKSPACE  build_vars.bzl  deps.bzl  go.mod  go.sum  golangci.yml  goreleaser.yaml  sonar-project.properties  standardize_comments.sh  test_config.bzl
.bazel/: downloader.conf
.devcontainer/: .dockerignore  .p10k.zsh  Dockerfile  build.sh  cleanup.sh  devcontainer.json  zshrc
.github/: copilot-instructions.md
.github/copilot-sections/: 00-prime-directive.md  01-go-optimization.md  01-prime-directive.md  02-docker-optimization.md  02-go-1-24-performance-standards.md  02-go-memory-optimization.md  03-documentation-format.md  03-go-disk-optimization.md  03-shell-optimization.md  04-go-cpu-optimization.md  04-optimization-workflow.md  05-cpu-optimization.md  05-go-documentation-format.md  06-disk-optimization.md  06-go-concurency-patterns.md  07-go-tests-patterns.md  07-memory-optimization.md  08-code-quality.md  09-test-coverage.md  10-review-checklist.md  11-summary.md  12-go-design-patterns.md  13-production-scale-patterns.md
.github/docker/alpine/: Dockerfile
.github/docker/arch/: Dockerfile
.github/docker/centos/: Dockerfile
.github/docker/debian/: Dockerfile
.github/docker/fedora/: Dockerfile
.github/docker/gentoo/: Dockerfile
.github/docker/opensuse/: Dockerfile
.github/docker/rhel/: Dockerfile
.github/workflows/: ci.yml
cmd/svz/: BUILD.bazel  main.go  main_e2e_helpers.go  main_e2e_install_test.go  main_e2e_version_test.go  main_test.go
docs/: version-command.md
internal/cli/: BUILD.bazel  cli.go  cli_test.go  version.go  version_test.go
internal/cli/agent/: BUILD.bazel
internal/cli/commands/install/: BUILD.bazel  install.go  install_test.go
internal/cli/commands/version/: BUILD.bazel  version.go  version_test.go
internal/infrastructure/pkgmanager/: BUILD.bazel  apk.go  apk_test.go  apt.go  apt_test.go  dnf.go  dnf_test.go  emerge.go  emerge_test.go  manager.go  manager_test.go  pacman.go  pacman_test.go  yum.go  yum_test.go  zypper.go  zypper_test.go
internal/infrastructure/transports/ssh/: BUILD.bazel  auth.go  auth_test.go  client.go  client_test.go  config.go  config_test.go  dialer.go  dialer_test.go  errors.go  errors_test.go  hostkey.go  hostkey_test.go  interfaces.go  ratelimit.go  ratelimit_test.go
internal/providers/: BUILD.bazel  install.go  install_test.go  version.go  version_test.go
internal/services/: BUILD.bazel  detector.go  detector_test.go  errors.go  errors_test.go  install.go  install_test.go  interfaces.go  version.go  version_test.go
internal/services/distro/: detector.go
internal/services/repository/: BUILD.bazel  setup.go  setup_test.go
internal/services/repository/alpine/: BUILD.bazel  handler.go  handler_test.go
internal/services/repository/arch/: BUILD.bazel  handler.go  handler_test.go
internal/services/repository/common/: BUILD.bazel  base_handler.go  helpers.go  helpers_test.go
internal/services/repository/debian/: BUILD.bazel  handler.go  handler_test.go
internal/services/repository/rhel/: BUILD.bazel  handler.go  handler_test.go
internal/transports/ssh/: auth.go  client.go  dialer.go  errors.go  hostkey.go
internal/utils/: BUILD.bazel  fmt.go  fmt_test.go  validation.go  validation_test.go
report/: jscpd-report.json
report/html/: jscpd-report.json
scripts/: generate-copilot.sh
test/e2e/: FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  e2e_test_orchestrator.sh  final_e2e_test.sh  run_e2e_docker_tests.sh  test_docker_e2e.sh  test_docker_install.sh  test_simple_e2e.sh  test_single_distro.sh
test/e2e/archive/: README.md  run_e2e_tests.sh  run_e2e_tests_simple.sh  simple_multi_distro_test.sh  test_single_distro_simple.sh  test_without_docker.sh
test/e2e/docker/: alpine.Dockerfile  arch.Dockerfile  centos.Dockerfile  debian.Dockerfile  docker-compose.yml  fedora.Dockerfile  ubuntu.Dockerfile
