load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "svz_lib",
    srcs = ["main.go"],
    importpath = "github.com/kodflow/superviz.io/cmd/svz",
    visibility = ["//visibility:private"],
    deps = ["//internal/cli"],
)

go_binary(
    name = "svz",
    embed = [":svz_lib"],
    visibility = ["//visibility:public"],
)
