load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "svz_lib",
    srcs = ["main.go"],
    importpath = "github.com/kodflow/superviz.io/cmd/svz",
    visibility = ["//visibility:private"],
    deps = ["//internal/cli"],
)

go_binary(
    name = "svz",
    embed = [":svz_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "svz_test",
    srcs = ["main_test.go"],
    embed = [":svz_lib"],
    deps = ["//internal/cli"],
)
