load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = [
        "cli.go",
        "version.go",
    ],
    importpath = "github.com/kodflow/superviz.io/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_spf13_cobra//:go_default_library"],
)
