load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/kodflow/superviz.io/internal/cli/commands/version",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/providers",
        "//internal/services",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "version_test",
    size = "small",
    srcs = ["version_test.go"],
    tags = ["unit"],
    deps = [
        ":version",
        "//internal/providers",
        "//internal/services",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
