load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rhel",
    srcs = ["handler.go"],
    importpath = "github.com/kodflow/superviz.io/internal/services/repository/rhel",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/infrastructure/transports/ssh",
        "//internal/services/repository/common",
    ],
)

go_test(
    name = "rhel_test",
    size = "small",
    srcs = ["handler_test.go"],
    embed = [":rhel"],
    tags = ["unit"],
    deps = [
        "//internal/infrastructure/transports/ssh",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
